Fix blurry masthead

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -58,6 +58,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
+    width: 580px;
   }
 }
 
